Apply clean hexagonal architecture
- Follow hexagonal architecture best practices:
-- Split contracts (interfaces) from implementations among domain and infrastructure for repositories